...
                            <constraint firstItem="Htf-p3-Je5" firstAttribute="top" secondItem="HyU-zS-sny" secondAttribute="top" constant="20" id="vus-UD-lYy"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="HyU-zS-sny"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Note Details" id="yvW-pJ-oRe">
                        <barButtonItem key="rightBarButtonItem" title="Edit" id="cy3-CS-Smf">
                            <connections>
                                <action selector="editButtonClicked:" destination="L6C-aX-9r0" id="tDA-LZ-sRR"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tTd-ca-OZp">
                                <rect key="frame" x="16" y="82" width="382" height="423"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="Note text input"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Note Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mw1-UY-irT">
                                <rect key="frame" x="16" y="58" width="382" height="16"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="New Note title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lCv-eb-Ddx">
                                <rect key="frame" x="16" y="16" width="382" height="34"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="Note title input"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <action selector="noteTitleChange:forEvent:" destination="5lb-I2-B4W" eventType="valueChanged" id="bkY-Iq-d13"/>
                                </connections>
                            </textField>
...
                            <constraint firstItem="lCv-eb-Ddx" firstAttribute="leading" secondItem="1Iw-nf-pv0" secondAttribute="leading" constant="16" id="zCv-r6-bkY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="1Iw-nf-pv0"/>
                    </view>
                    <navigationItem key="navigationItem" title="Edit Note" id="XXO-Fx-g3b">
                        <rightBarButtonItems>
                            <barButtonItem enabled="NO" title="Done" id="P8D-w3-CaT">
                                <connections>
                                    <action selector="doneButtonClicked:forEvent:" destination="5lb-I2-B4W" id="T7a-9j-Gqe"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Attach" image="paperclip" catalog="system" landscapeImage="paperclip" largeContentSizeImage="paperclip" id="mF8-GI-8u7">
                                <connections>
...
                        <connections>
                            <outlet property="dataSource" destination="2wh-ye-GsR" id="5uH-Xq-Itr"/>
                            <outlet property="delegate" destination="2wh-ye-GsR" id="ePw-tF-VgP"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Notes List" id="dj1-Wp-RNz">
                        <rightBarButtonItems>
                            <barButtonItem title="Add Note" image="plus" catalog="system" landscapeImage="plus" largeContentSizeImage="plus" id="pV5-Mf-dhg">
                                <connections>
                                    <action selector="insertNewObject:" destination="2wh-ye-GsR" id="SVR-6d-DQa"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="Weather" image="sun.min" catalog="system" landscapeImage="sun.min" largeContentSizeImage="sun.min" id="mxK-fV-iSa">
                                <connections>
                                    <action selector="showWeather:" destination="2wh-ye-GsR" id="cg2-Au-PxX"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Weather" id="ew3-fl-EtP">
                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="1" id="rDB-O1-cKC">
                            <rect key="frame" x="93.5" y="5.5" width="227" height="33"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <segments>
                                <segment title="Daily weather"/>
                                <segment title="Hourly weather"/>
                            </segments>
                            <connections>
                                <action selector="segmentedControlClicked:" destination="85U-30-tbf" eventType="valueChanged" id="bXY-fq-Czm"/>
                            </connections>
                        </segmentedControl>
...
