...
        
        navigationItem.leftBarButtonItem = editButtonItem
        navigationItem.searchController = searchController

        searchController.searchResultsUpdater = self
        searchController.obscuresBackgroundDuringPresentation = false
        searchController.searchBar.placeholder = "Search Notes"
        definesPresentationContext = true
        
        self.fetchNotes()
    }

    override func viewWillAppear(_ animated: Bool) {
...
